# maxwell-frontend-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
config/: config.template.toml  config.toml
src/: config.rs  handler.rs  ip_resolver.rs  main.rs  master_client.rs  registrar.rs  route_syncer.rs  route_table.rs  topic_cleaner.rs  topic_localizer.rs
src/handler/: http_handler.rs  mod.rs  ws_handler.rs
