[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-frontend"
version = "0.5.0"

[dependencies]
config = "0.13.4"
log = "0.4.20"
log4rs = "1.2.0"

actix = "0.13.1"
actix-cors = "0.6.5"
actix-http = "3.4.0"
actix-web = {version = "4.4.0", features = ["rustls-0_21"]}
actix-web-actors = "4.2.0"
futures = "0.3.29"
futures-intrusive = "0.5.0"
reqwest = {version = "0.11.22", features = ["stream"]}
rustls = "0.21.10"
rustls-pemfile = "1.0.4"
tokio = {version = "1.34.0", features = ["full"]}

ahash = "0.8.6"
anyhow = "1.0.75"
bytes = "1.5.0"
dashmap = "5.5.3"
indexmap = "2.1.0"
moka = {version = "0.12.1", default-features = false, features = ["sync", "future"]}
once_cell = "1.19.0"
quanta = "0.12.1"
quick_cache = {git = "https://github.com/xuchaoqian/quick-cache.git", branch = "master"}
serde = "1.0.193"
serde_derive = "1.0.193"

maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.21.0"}
maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.21"}

# console-subscriber = "0.2.0"
tikv-jemallocator = {version = "0.5.4", features = ["profiling"]}

[profile.release]
debug = true
