[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-frontend"
version = "0.8.0"

[dependencies]
config = "0.14.0"
log = "0.4.21"
log4rs = "1.3.0"

actix = "0.13.3"
actix-cors = "0.7.0"
actix-http = "3.6.0"
actix-web = {version = "4.5.1", features = ["rustls-0_21"]}
actix-web-actors = "4.3.0"
futures = "0.3.30"
futures-intrusive = "0.5.0"
matchit = "0.8.0"
reqwest = {version = "0.11.27", features = ["stream"]}
rustls = "0.21.10"
rustls-pemfile = "1.0.4"
tokio = {version = "1.37.0", features = ["full"]}

ahash = "0.8.11"
anyhow = "1.0.82"
arc-swap = "1.7.1"
bytes = "1.6.0"
dashmap = "5.5.3"
indexmap = "2.2.6"
moka = {version = "0.12.6", default-features = false, features = ["sync", "future"]}
once_cell = "1.19.0"
quanta = "0.12.3"
quick_cache = "0.5.1"
serde = "1.0.197"
serde_derive = "1.0.197"
tikv-jemallocator = {version = "0.5.4", features = ["profiling"]}

maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.23.1"}
maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.28"}
