[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-frontend"
version = "0.9.0"

[dependencies]
config = "0.14.0"
log = "0.4.22"
log4rs = "1.3.0"

actix = "0.13.5"
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-web = {version = "4.9.0", features = ["rustls-0_23"]}
actix-web-actors = "4.3.1"
futures = "0.3.30"
futures-intrusive = "0.5.0"
matchit = "0.8.4"
reqwest = {version = "0.11.27", features = ["stream"]}
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
tokio = {version = "1.40.0", features = ["full"]}

ahash = "0.8.11"
anyhow = "1.0.87"
arc-swap = "1.7.1"
bytes = "1.7.1"
dashmap = "6.1.0"
indexmap = "2.5.0"
moka = {version = "0.12.8", default-features = false, features = ["sync", "future"]}
once_cell = "1.19.0"
quanta = "0.12.3"
quick_cache = "0.6.6"
serde = "1.0.210"
serde_derive = "1.0.210"
tikv-jemallocator = {version = "0.6.0", features = ["profiling"]}

maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.24.1"}
maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.11.0"}
